[gd_scene load_steps=2 format=3 uid="uid://dw7rk5xp6l3mc"]

[ext_resource type="Script" path="res://scenes/game_over_controller.gd" id="1_game_over"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game_over")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 0.95)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 100.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer1" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "SCORE"
horizontal_alignment = 1

[node name="ScoreValue" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.843137, 0, 1)
theme_override_font_sizes/font_size = 72
text = "0"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "HIGH SCORE: 0"
horizontal_alignment = 1

[node name="NewRecordLabel" type="Label" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.9, 0.3, 1)
theme_override_font_sizes/font_size = 28
text = "NEW RECORD!"
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="StatsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="BlocksPlacedLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 22
text = "Blocks Placed: 0"
horizontal_alignment = 1

[node name="PerfectsLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 22
text = "Perfect Placements: 0"
horizontal_alignment = 1

[node name="MaxComboLabel" type="Label" parent="VBoxContainer/StatsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 22
text = "Max Combo: 0"
horizontal_alignment = 1

[node name="Spacer3" type="Control" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RestartButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(350, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "PLAY AGAIN"

[node name="WatchAdButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(350, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "CONTINUE (WATCH AD)"

[node name="MenuButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(350, 70)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 28
text = "MAIN MENU"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/WatchAdButton" to="." method="_on_watch_ad_pressed"]
[connection signal="pressed" from="VBoxContainer/MenuButton" to="." method="_on_menu_pressed"]
